# hikari

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: ProjectSettings.cmake  hikariConfig.cmake.in
docs/: CMakeLists.txt  Doxyfile.in  api.rst  conf.py  index.rst  syntax.rst
examples/: CMakeLists.txt  hkr2ly.cpp  playground.cpp
lib/: CMakeLists.txt
lib/include/hikari/: api.h  export.h  types.h
lib/src/: lilypond_converter.cpp  lilypond_converter.h  measurifier.cpp  parser.cpp  parser.h  parser_types.cpp  parser_types.h  preprocessor.cpp  tie_processor.cpp  tie_processor.h  types.cpp
lib/src/lilypond/: indented_formatter.cpp  indented_formatter.h  music_converter.cpp  music_converter.h  music_formatter.cpp  types.h
lib/src/parser/: measurifier.cpp  measurifier.h  parser.cpp  parser.h  parser_types.h  preprocessor.h
